<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotaAdicionar"
    android:background="#8b8b8b"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView5"
        android:layout_above="@+id/linearLayout4">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout4"
            android:layout_alignParentTop="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_tulo"
                android:id="@+id/textView10"
                android:textSize="22dp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextTittuloNota"
                android:singleLine="true"
                android:maxLength="30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anota_o"
                android:id="@+id/textView12"
                android:textSize="22dp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="437dp"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/editTextNotaTexto"
                android:gravity="top" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout4"
        android:gravity="right"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/buttonNotaSalvar"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/buttonshape"
            android:text="@string/salvar"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonNotaCancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/buttonNotaSalvar"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/buttonshape"
            android:text="@string/cancelar"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>
